modules/015-admission-policy-engine/charts/constraint-templates/tests/test_cases/constraints/security/allowed-apparmor-profiles/rendered/test_samples/pods/001-006-allowed-runtime-default-annotation.yaml
# Code generated by constraint_testgen; DO NOT EDIT.

apiVersion: v1
kind: Pod
metadata:
    annotations:
        container.apparmor.security.beta.kubernetes.io/nginx: runtime/default
    name: allowed-runtime-default-annotation
    namespace: testns
spec:
    containers:
        - image: nginx
          name: nginx
