modules/015-admission-policy-engine/charts/constraint-templates/tests/test_cases/constraints/security/allowed-apparmor-profiles/rendered/test_samples/pods/002-007-allowed-localhost-profile-securitycontext.yaml
# Code generated by constraint_testgen; DO NOT EDIT.

apiVersion: v1
kind: Pod
metadata:
    name: allowed-localhost-profile-securitycontext
    namespace: testns
spec:
    containers:
        - image: nginx
          name: nginx
          securityContext:
            appArmorProfile:
                localhostProfile: localhost/my-profile
                type: Localhost
