modules/015-admission-policy-engine/charts/constraint-templates/tests/test_cases/constraints/security/allowed-apparmor-profiles/rendered/test_samples/pods/003-008-disallowed-initcontainer-unconfined.yaml
# Code generated by constraint_testgen; DO NOT EDIT.

apiVersion: v1
kind: Pod
metadata:
    name: disallowed-initcontainer-unconfined
    namespace: testns
spec:
    containers:
        - image: nginx
          name: nginx
          securityContext:
            appArmorProfile:
                type: RuntimeDefault
    initContainers:
        - command:
            - /bin/sh
            - -c
            - echo init
          image: busybox
          name: init
          securityContext:
            appArmorProfile:
                type: Unconfined
