modules/015-admission-policy-engine/charts/constraint-templates/tests/test_cases/constraints/security/allowed-apparmor-profiles/rendered/test_samples/pods/004-009-disallowed-multiple-containers-one-unconfined.yaml
# Code generated by constraint_testgen; DO NOT EDIT.

apiVersion: v1
kind: Pod
metadata:
    name: disallowed-multiple-containers-one-unconfined
    namespace: testns
spec:
    containers:
        - image: nginx
          name: nginx
          securityContext:
            appArmorProfile:
                type: Unconfined
        - command:
            - /bin/sh
            - -c
            - sleep 3600
          image: busybox
          name: sidecar
          securityContext:
            appArmorProfile:
                type: RuntimeDefault
