modules/015-admission-policy-engine/charts/constraint-templates/tests/test_cases/constraints/security/allowed-apparmor-profiles/rendered/test_samples/pods/005-010-disallowed-unconfined-annotation.yaml
# Code generated by constraint_testgen; DO NOT EDIT.

apiVersion: v1
kind: Pod
metadata:
    annotations:
        container.apparmor.security.beta.kubernetes.io/nginx: unconfined
    name: disallowed-unconfined-annotation
    namespace: testns
spec:
    containers:
        - image: nginx
          name: nginx
