modules/015-admission-policy-engine/charts/constraint-templates/tests/test_cases/constraints/security/allowed-apparmor-profiles/rendered/test_samples/pods/007-012-allowed-no-apparmor-profile.yaml
# Code generated by constraint_testgen; DO NOT EDIT.

apiVersion: v1
kind: Pod
metadata:
    name: allowed-no-apparmor-profile
    namespace: testns
spec:
    containers:
        - image: nginx
          name: nginx
