modules/015-admission-policy-engine/charts/constraint-templates/tests/test_cases/constraints/security/allowed-apparmor-profiles/rendered/test_samples/pods/008-013-allowed-pod-securitycontext-runtime-default.yaml
# Code generated by constraint_testgen; DO NOT EDIT.

apiVersion: v1
kind: Pod
metadata:
    name: allowed-pod-securitycontext-runtime-default
    namespace: testns
spec:
    containers:
        - image: nginx
          name: nginx
    securityContext:
        appArmorProfile:
            type: RuntimeDefault
