modules/015-admission-policy-engine/charts/constraint-templates/tests/test_cases/constraints/security/allowed-apparmor-profiles/rendered/test_suite.yaml
# Code generated by constraint_testgen; DO NOT EDIT.

kind: Suite
apiVersion: test.gatekeeper.sh/v1alpha1
metadata:
  name: d8-apparmor-profiles
tests:
  - name: pss-baseline
    template: constraint-template.yaml
    constraint: ../constraints/pss_baseline.yaml
    cases:
      - name: 006-allowed-runtime-default-annotation
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/001-006-allowed-runtime-default-annotation.yaml
        assertions:
          - violations: "no"
      - name: 007-allowed-localhost-profile-securitycontext
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/002-007-allowed-localhost-profile-securitycontext.yaml
        assertions:
          - violations: "no"
      - name: 008-disallowed-initcontainer-unconfined
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/003-008-disallowed-initcontainer-unconfined.yaml
        assertions:
          - violations: "yes"
      - name: 009-disallowed-multiple-containers-one-unconfined
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/004-009-disallowed-multiple-containers-one-unconfined.yaml
        assertions:
          - violations: "yes"
      - name: 010-disallowed-unconfined-annotation
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/005-010-disallowed-unconfined-annotation.yaml
        assertions:
          - violations: "yes"
      - name: 011-disallowed-unconfined-securitycontext
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/006-011-disallowed-unconfined-securitycontext.yaml
        assertions:
          - violations: "yes"
      - name: 012-allowed-no-apparmor-profile
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/007-012-allowed-no-apparmor-profile.yaml
        assertions:
          - violations: "no"
      - name: 013-allowed-pod-securitycontext-runtime-default
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/008-013-allowed-pod-securitycontext-runtime-default.yaml
        assertions:
          - violations: "no"
      - name: 014-disallowed-pod-securitycontext-unconfined
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/009-014-disallowed-pod-securitycontext-unconfined.yaml
        assertions:
          - violations: "yes"
      - name: 015-disallowed-initcontainer-unconfined-annotation
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/010-015-disallowed-initcontainer-unconfined-annotation.yaml
        assertions:
          - violations: "yes"
      - name: 016-disallowed-multiple-containers-one-unconfined-annotation
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/011-016-disallowed-multiple-containers-one-unconfined-annotation.yaml
        assertions:
          - violations: "yes"
      - name: 030-disallowed-ephemeralcontainer-unconfined
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/012-030-disallowed-ephemeralcontainer-unconfined.yaml
        assertions:
          - violations: "yes"
      - name: 031-disallowed-ephemeralcontainer-unconfined-annotation
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/013-031-disallowed-ephemeralcontainer-unconfined-annotation.yaml
        assertions:
          - violations: "yes"
  - name: pss-baseline-with-exception
    template: constraint-template.yaml
    constraint: ../constraints/pss_baseline.yaml
    cases:
      - name: 015-025-disallowed-by-exception-profile-mismatch
        inventory:
          - ../../../_test-samples/ns.yaml
          - test_samples/spe/001-015-025-disallowed-by-exception-profile-mismatch-inv-1.yaml
        object: test_samples/pods/014-015-025-disallowed-by-exception-profile-mismatch.yaml
        assertions:
          - violations: "yes"
      - name: 029-allowed-by-exception-unconfined
        inventory:
          - ../../../_test-samples/ns.yaml
          - test_samples/spe/002-029-allowed-by-exception-unconfined-inv-1.yaml
        object: test_samples/pods/015-029-allowed-by-exception-unconfined.yaml
        assertions:
          - violations: "no"
  - name: pss-baseline-spe-container
    template: constraint-template.yaml
    constraint: ../constraints/pss_baseline.yaml
    cases:
      - name: 018-028-allowed-by-container-specific-exception-unconfined
        inventory:
          - ../../../_test-samples/ns.yaml
          - test_samples/spe/003-018-028-allowed-by-container-specific-exception-unconfined-inv-1.yaml
        object: test_samples/pods/016-018-028-allowed-by-container-specific-exception-unconfined.yaml
        assertions:
          - violations: "no"
  - name: pss-baseline-restrictive-with-exception
    template: constraint-template.yaml
    constraint: ../constraints/pss_deny_all.yaml
    cases:
      - name: 013-023-disallowed-by-exception-localhost-profile-mismatch
        inventory:
          - ../../../_test-samples/ns.yaml
          - test_samples/spe/004-013-023-disallowed-by-exception-localhost-profile-mismatch-inv-1.yaml
        object: test_samples/pods/017-013-023-disallowed-by-exception-localhost-profile-mismatch.yaml
        assertions:
          - violations: "yes"
      - name: 015-025-disallowed-by-exception-profile-mismatch-restrictive
        inventory:
          - ../../../_test-samples/ns.yaml
          - test_samples/spe/001-015-025-disallowed-by-exception-profile-mismatch-inv-1.yaml
        object: test_samples/pods/014-015-025-disallowed-by-exception-profile-mismatch.yaml
        assertions:
          - violations: "yes"
      - name: 015-024-disallowed-by-exception-multiple-containers-one-mismatch
        inventory:
          - ../../../_test-samples/ns.yaml
          - test_samples/spe/001-015-025-disallowed-by-exception-profile-mismatch-inv-1.yaml
        object: test_samples/pods/019-015-024-disallowed-by-exception-multiple-containers-one-mismatch.yaml
        assertions:
          - violations: "yes"
      - name: 026-disallowed-no-exception-label
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/020-026-disallowed-no-exception-label.yaml
        assertions:
          - violations: "yes"
      - name: 017-027-disallowed-by-exception-empty-spec
        inventory:
          - ../../../_test-samples/ns.yaml
          - test_samples/spe/007-017-027-disallowed-by-exception-empty-spec-inv-1.yaml
        object: test_samples/pods/021-017-027-disallowed-by-exception-empty-spec.yaml
        assertions:
          - violations: "yes"
